# Eskom

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
docs/: mkdocs.yml
docs/docs/: index.md
eskom_energy_demand_forecasting/: __init__.py  config.py  dataset.py  features.py  metrics.py  plots.py
eskom_energy_demand_forecasting/modeling/: predict.py  train.py
models/: config.json  final_model.pkl  metrics_summary.json  predictions_latest.csv
models/predictions/: fold_1_ETS.csv  fold_1_ElasticNet.csv  fold_1_HistGB.csv  fold_1_Naive.csv  fold_1_RollingMean.csv  fold_1_SeasonalNaive.csv  fold_1_XGBoost.csv  fold_2_ETS.csv  fold_2_ElasticNet.csv  fold_2_HistGB.csv  fold_2_Naive.csv  fold_2_RollingMean.csv  fold_2_SeasonalNaive.csv  fold_2_XGBoost.csv  fold_3_ETS.csv  fold_3_ElasticNet.csv  fold_3_HistGB.csv  fold_3_Naive.csv  fold_3_RollingMean.csv  fold_3_SeasonalNaive.csv  fold_3_XGBoost.csv  fold_4_ETS.csv  fold_4_ElasticNet.csv  fold_4_HistGB.csv  fold_4_Naive.csv  fold_4_RollingMean.csv  fold_4_SeasonalNaive.csv  fold_4_XGBoost.csv  fold_5_ETS.csv  fold_5_ElasticNet.csv  fold_5_HistGB.csv  fold_5_Naive.csv  fold_5_RollingMean.csv  fold_5_SeasonalNaive.csv  fold_5_XGBoost.csv  fold_6_ETS.csv  fold_6_ElasticNet.csv  fold_6_HistGB.csv  fold_6_Naive.csv  fold_6_RollingMean.csv  (+2 more)
reports/: audit_codebase.md  audit_codebase_v2.md  fold_metrics.csv  split_sanity_checks.txt
src/eskom_energy_demand_forecasting/: config.py  features.py  plots.py
src/eskom_energy_demand_forecasting/modeling/: predict.py  (+1 more)
tests/: test_smoke.py
