[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "eskom_energy_demand_forecasting"
version = "0.0.1"
description = "This project aims to accurately predict the hourly energy demand using Eskom's published dataset from the Eskom Data Portal."
authors = [
  { name = "Rhulane Mkhawane" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"

[tool.flit.module]
name = "eskom_energy_demand_forecasting"

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["eskom_energy_demand_forecasting"]
force-sort-within-sections = true
